Prep for v1.0.4 release

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "scikit-sundae" %}
-{% set version = "1.1.0" %}
+{% set version = "1.0.4" %}
 
 package:
   name: {{ name|lower }}
@@ -7,18 +7,18 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace("-", "_") }}-{{ version }}.tar.gz
-  sha256: 43bf8c4b6d23c95808922da01d38f620f39ed6fc175c10707eec63dc2cf17986
+  sha256: f32d23812bccdff57bb61412f8213d59eb833e15860552e5afa64eee6dc1e5a2
 
 build:
   script:
     - export SUNDIALS_PREFIX=$PREFIX          # [not win]
     - set "SUNDIALS_PREFIX=%LIBRARY_PREFIX%"  # [win]
     - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 1
+  number: 0
 
 requirements:
   build:
-    - python  # [build_platform != target_platform]
+    - python >=3.9,<3.14  # [build_platform != target_platform]
     - setuptools  # [build_platform != target_platform]
     - cython  # [build_platform != target_platform]
     - numpy  # [build_platform != target_platform]
@@ -28,7 +28,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
   host:
-    - python
+    - python >=3.9,<3.14
     - setuptools
     - cython
     - numpy
@@ -36,7 +36,7 @@ requirements:
     - pip
     - sundials >=7.5,<7.6
   run:
-    - python
+    - python >=3.9,<3.14
     - numpy
     - scipy
     - sundials >=7.5,<7.6
