--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,37 +15,35 @@ build:
     - set "SUNDIALS_PREFIX=%LIBRARY_PREFIX%"  # [win]
     - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   number: 0
-  skip: true  # [py>313]
+  skip: True  # [py>313]
 
 requirements:
   build:
-    - python >=3.9,<3.14  # [build_platform != target_platform]
+    - python  # [build_platform != target_platform]
     - setuptools  # [build_platform != target_platform]
     - cython  # [build_platform != target_platform]
     - numpy  # [build_platform != target_platform]
     - packaging  # [build_platform != target_platform]
-    - sundials >=7.5,<7.6  # [build_platform != target_platform]
+    - sundials >=7.2,<7.3  # [build_platform != target_platform]
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
   host:
-    - python >=3.9,<3.14
+    - python
     - setuptools
     - cython
     - numpy
     - libblas
     - pip
-    - sundials >=7.5,<7.6
+    - sundials >=7.2,<7.3
   run:
-    - python >=3.9,<3.14
+    - python
     - numpy
-    - scipy
-    - sundials >=7.5,<7.6
+    - sundials >=7.2,<7.3
 
 test:
   imports:
     - numpy
-    - scipy
     - sksundae
 
 about:
